[workspace]

members = [
    "bloock-core",
    "bloock-bridge",
    "bloock-libs/executor",
    "bloock-libs/metadata",
    "bloock-libs/http",
    "bloock-libs/web3",
    "bloock-libs/encrypter",
    "bloock-libs/hasher",
    "bloock-libs/signer"
]

exclude = []

[profile.release]
debug = false

[profile.bench]
debug = true
