[workspace]

members = [
    "bloock-core",
    "bloock-bridge",
    "bloock-libs/executor",
    "bloock-libs/identity",
    "bloock-libs/metadata",
    "bloock-libs/http",
    "bloock-libs/web3",
    "bloock-libs/encrypter",
    "bloock-libs/hasher",
    "bloock-libs/keys",
    "bloock-libs/signer",
    "bloock-libs/identity-v2",
]

exclude = []

[profile.release]
debug = false
lto = true
opt-level = "z"
codegen-units = 1

[profile.bench]
debug = true
