[package]
name = "bloock_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloock_bridge"
crate-type = ["staticlib", "rlib", "cdylib"]
bench = false

[dependencies]
bloock-core = { path = "../bloock-core", version = "=0.1.0" }
diplomat = "0.3.0"
diplomat-runtime = "0.3.0"
prost = "0.11.0"
prost-types = "0.11.0"
thiserror = "1.0.31"
async-trait = "0.1.57"
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"

[build-dependencies]
prost-build = "0.11.0"
convert_case = "0.5.0"

[features]
default = []
