[package]
name = "bloock_bridge"
version = "2.0.0-beta.23"
edition = "2021"

[lib]
name = "bloock_bridge"
crate-type = ["staticlib", "cdylib", "rlib"]
bench = false

[dependencies]
bloock-core = { path = "../bloock-core" }
diplomat = "0.3.0"
diplomat-runtime = "0.3.0"
prost = "0.11.0"
thiserror = "1.0.31"
async-trait = "0.1.57"
base64 = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
web-sys = { version = "0.3.52", features = [ "console" ]}
js-sys = "0.3.59"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bloock-executor = { path = "../bloock-libs/executor" }

[build-dependencies]
prost-build = "0.11.0"
convert_case = "0.5.0"
cbindgen = { version = "0.20.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"
