[package]
name = "bloock_bridge"
version = "2.9.6"
edition = "2021"

[lib]
name = "bloock_bridge"
crate-type = ["staticlib", "cdylib"]
bench = false

[dependencies]
bloock-core = { path = "../bloock-core" }
diplomat = "0.3.0"
diplomat-runtime = "0.3.0"
prost = "0.11.8"
thiserror = "1.0.31"
async-trait = "0.1.57"
base64 = "0.13.0"
serde_json = "1.0.82"
bloock-encrypter = { path = "../bloock-libs/encrypter" }
bloock-hasher = { path = "../bloock-libs/hasher" }
bloock-keys = { path = "../bloock-libs/keys" }
bloock-identity-rs = { path = "../bloock-libs/identity" }
bloock-signer = { path = "../bloock-libs/signer" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.59"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bloock-executor = { path = "../bloock-libs/executor" }

[build-dependencies]
prost-build = "0.11.8"
convert_case = "0.5.0"
cbindgen = { version = "0.20.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"
