[package]
name = "bloock-c-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloock"
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[dependencies]
bloock-core = { path = "../bloock-core", version = "=0.1.0" }
serde = "1.0.139"
serde_json = "1.0.82"
tokio = {version = "1.20.1", features = ["rt", "macros"]}

[build_dependencies]
cbindgen = { version = "0.24.3", default-features = false }

[features]
default = []