[package]
name = "bloock-core"
version = "2.9.7"
edition = "2021"

[lib]
bench = false

[dependencies]
serde = { version = "1.0.139", features = ["std", "derive"] }
thiserror = "1.0.31"
serde_json = "1.0.82"
hex = "0.4.3"
bitvec = "1"
base64 = "0.22.1"
async-std = "1.12.0"
hmac = "0.12.1"
sha2 = "0.10.6"
url = "2.3.1"
bloock-hasher = { path = "../bloock-libs/hasher" }
bloock-keys = { path = "../bloock-libs/keys" }
bloock-signer = { path = "../bloock-libs/signer" }
bloock-encrypter = { path = "../bloock-libs/encrypter" }
bloock-metadata = { path = "../bloock-libs/metadata" }
bloock-http = { path = "../bloock-libs/http" }
bloock-web3 = { path = "../bloock-libs/web3" }
bloock-identity-rs = { path = "../bloock-libs/identity" }

[dev-dependencies]
mockall = "0.13.0"
tokio = { version = "1.39.2", features = ["rt", "macros"] }

[dev-dependencies.bloock-http]
path = "../bloock-libs/http"
features = ["testing"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.59"
wasm-bindgen-futures = "0.4.32"
