[package]
name = "bloock-encrypter"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
bloock-keys = { path = "../keys" }
bloock-http = { path = "../http" }
async-trait = "0.1.57"
serde = { version = "1.0.123", features = ["std", "derive"] }
thiserror = "1.0.31"
aes-gcm = "0.10"
rsa = "0.7.2"
getrandom = {version = "0.2.7", features = ["js"]}
rand = "0.8.5"
base64-url = "1.4.13"
pbkdf2 = "0.11.0"
hmac = "0.12.1"
sha2 = "0.10.6"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.24.1", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"