[package]
name = "bloock-executor"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
serde = { version = "1.0.207", features = ["std", "derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }

[[test]]
name = "default"
path = "tests/default.rs"