[package]
name = "bloock-http"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
serde = { version = "1.0.207", features = ["std", "derive"] }
serde_json = "1.0.124"
thiserror = "1.0.31"
async-trait = "0.1.81"
mockall = { version = "0.13.0", optional = true }
infer = "0.16.0"
mime = "0.3.17"
multipart = { version = "0.18.0", default-features = false, features = [
    "client",
] }
uuid = { version = "1.10.0", features = ["v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2.9.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.59"
wasm-bindgen = { version = "0.2.82" }
wasm-bindgen-futures = "0.4.32"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.59", features = [
    "Headers",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }

[dev-dependencies]
mockall = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"

[features]
testing = ["mockall"]

[[test]]
name = "default"
path = "tests/default.rs"

[[test]]
name = "wasm"
path = "tests/wasm.rs"
