[package]
name = "bloock-identity-rs"
version = "0.1.0"
edition = "2021"
authors = [
    "Marc Baqué <marc@bloock.com>",
    "Eduard Tomàs <eduard.tomas@bloock.com>",
]
description = "Verifiable Credential implementation compatible with Polygon ID"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bloock/bloock-identity-rs"
 
[dependencies]
thiserror = "1.0.31"
ssi = "0.7.0"
serde_json = "1.0.82"
rand = "0.8.5"
lazy_static = "1.4.0"
base58 = "0.1.0"
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4"] }
jsonschema = { version = "0.17.1", features = [
    "draft202012",
    "draft201909",
], default-features = false }
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
json-ld = "0.12.1"
iref = "2.2.3"
locspan = "0.7.13"
json-syntax = { version = "0.9", features = ["serde"] }
rdf-types = "0.12.19"
futures = "0.3.28"
ssi-json-ld = "0.2.2"
bloock-merkletree-rs = "0.1.1"
bloock-poseidon-rs = "0.1.5"
regex = "1.9.1"
serde = { version = "1.0.139", features = ["std", "derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
url = "2.3.1"
cid = "0.10.1"
bloock-http = { path = "../http" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.40"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }