[package]
name = "bloock-keys"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
thiserror = "1.0.31"
serde = { version = "1.0.123", features = ["std", "derive"] }
bloock-http = { path = "../http" }
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"
hex = "0.4.3"
libsecp256k1 = "0.7.1"
tiny-bip39 = "1.0.0"
bip32 = "0.4.0"
tiny-hderive = "0.3.0"
rsa = { version = "0.9.2", features = ["sha2"] }
sha2 = { version = "0.10", features = ["oid"] }
x509-cert = { version = "0.2.4", features = ["builder"] }
babyjubjub-rs = "0.0.10"
num-bigint = { version = "0.4", features = ["rand"] }

# P12
des = "^0.8"
hmac = "^0.12"
lazy_static = "^1.4"
rc2 = "^0.8"
sha1 = "^0.10"
cbc = { version = "^0.1", features = ["block-padding"] }
cipher = { version = "^0.4.2", features = ["alloc", "block-padding"] }
yasna = { version = "^0.5", features = ["std"] }
pkcs5 = { version = "0.7.1", features = ["alloc", "pbes2"] }
der = "0.7.8"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.59"
