[package]
name = "bloock-keys"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
thiserror = "1.0.63"
serde = { version = "1.0.207", features = ["std", "derive"] }
bloock-http = { path = "../http" }
bloock-hasher = { path = "../hasher" }
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
hex = "0.4.3"
libsecp256k1 = "0.7.1"
tiny-bip39 = "1.0.0"
bip32 = "0.5.2"
tiny-hderive = "0.3.0"
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = { version = "0.10.8", features = ["oid"] }
x509-cert = { version = "0.2.5", features = ["builder"] }
bloock-babyjubjub-rs = "0.0.11"
num-bigint = { version = "0.4.6", features = ["rand"] }
async-trait = "0.1.81"
regex = "1.10.6"

# P12
des = "^0.8.1"
hmac = "^0.12.1"
lazy_static = "^1.5.0"
rc2 = "^0.8.1"
sha1 = "^0.10.6"
cbc = { version = "^0.1.2", features = ["block-padding"] }
cipher = { version = "^0.4.4", features = ["alloc", "block-padding"] }
yasna = { version = "^0.5.2", features = ["std"] }
pkcs5 = { version = "0.7.1", features = ["alloc", "pbes2"] }
der = "0.7.9"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.59"
