[package]
name = "bloock-metadata"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
thiserror = "1.0.31"
lopdf = "0.31.0"
serde = { version = "1.0.123", features = ["std", "derive"] }
serde_json = "1.0.82"
infer = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"
