[package]
name = "bloock-metadata"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
thiserror = "1.0.31"
lopdf = "0.31.0"
serde = { version = "1.0.123", features = ["std", "derive"] }
serde_json = "1.0.82"
infer = "0.9.0"
bloock-signer = { path = "../signer" }
bloock-hasher = { path = "../hasher" }
bloock-keys = { path = "../keys" }
bloock-encrypter = { path = "../encrypter" }
pem = "2.0.1"
ring = "0.16.20"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
signature = { version = "2.1.0", features = ["std"] }
x509-certificate = {version = "0.19.0", features = ["test"]}
x509-cert = { version = "0.2.4", features = ["builder"] }
bcder = "0.7.2"
hex = "0.4.3"
chrono = { version = "0.4.26", default-features = false }
bytes = "1.4.0"
async-trait = "0.1.57"
cms = {version = "0.2.2", features = ["builder"] }
const-oid = "0.9.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["rt", "macros"] }
