[package]
name = "bloock-metadata"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
thiserror = "1.0.63"
lopdf = "0.33.0"
serde = { version = "1.0.207", features = ["std", "derive"] }
serde_json = "1.0.124"
infer = "0.16.0"
bloock-signer = { path = "../signer" }
bloock-hasher = { path = "../hasher" }
bloock-keys = { path = "../keys" }
bloock-encrypter = { path = "../encrypter" }
pem = "3.0.4"
ring = "0.17.8"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "rustls-tls"] }
signature = { version = "2.2.0", features = ["std"] }
x509-certificate = {version = "0.19.0", features = ["test"]}
x509-cert = { version = "0.2.5", features = ["builder"] }
bcder = "0.7.4"
hex = "0.4.3"
chrono = { version = "0.4.38", default-features = false }
bytes = "1.7.1"
async-trait = "0.1.81"
cms = {version = "0.2.3", features = ["builder"] }
const-oid = "0.9.6"
rsa = { version = "0.9.6", features = ["sha2"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["rt", "macros"] }
