[package]
name = "bloock-publisher"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
thiserror = "1.0.31"
async-trait = "0.1.57"
serde = { version = "1.0.123", features = ["std", "derive"] }
multipart = "0.18.0"
bloock-http = { path = "../http" }
infer = "0.9.0"
mockall = { version = "0.11.2", optional = true }

[dev-dependencies]
mockall = "0.11.2"

[features]
testing = ["mockall"]