[package]
name = "bloock-signer"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
base64-url = "1.4.13"
hex = "0.4.3"
bloock-hasher = { path = "../hasher" }
serde = { version = "1.0.123", features = ["std", "derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
libsecp256k1 = "0.7.1"
getrandom = {version = "0.2.7", features = ["js"]}
rand = "0.8.5"
ethers = "1.0.2"
