[package]
name = "bloock-signer"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
base64-url = "1.4.13"
hex = "0.4.3"
async-trait = "0.1.57"
bloock-hasher = { path = "../hasher" }
bloock-keys = { path = "../keys" }
bloock-web3 = { path = "../web3" }
bloock-http = { path = "../http" }
serde = { version = "1.0.123", features = ["std", "derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
libsecp256k1 = "0.7.1"
babyjubjub-rs = "0.0.10"
num-bigint = "0.4.3"


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.24.1", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"
