[package]
name = "bloock-signer"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
base64-url = "3.0.0"
hex = "0.4.3"
async-trait = "0.1.81"
bloock-hasher = { path = "../hasher" }
bloock-keys = { path = "../keys" }
bloock-web3 = { path = "../web3" }
bloock-http = { path = "../http" }
serde = { version = "1.0.207", features = ["std", "derive"] }
serde_json = "1.0.124"
thiserror = "1.0.63"
libsecp256k1 = "0.7.1"
bloock-babyjubjub-rs = "0.0.11"
num-bigint = "0.4.6"
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = { version = "0.10.8", features = ["oid"] }


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.24.1", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"
