[package]
name = "bloock-web3"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
thiserror = "1.0.31"
hex = "0.4.3"
serde = { version = "1.0.123", features = ["std", "derive"] }
serde_json = "1.0.82"
bloock-http = { path = "../http" }
ethabi = "18.0.0"

[dev-dependencies]
mockall = "0.11.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.19.2", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"

[[test]]
name = "default"
path = "tests/default.rs"

[[test]]
name = "wasm"
path = "tests/wasm.rs"
